spec/santa.yaml
###
# This is a single node deployment with a sqlite3 db backing it
# w/ no caching or anything. It will fall in the face of success
#                                                 ~ Michael
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-service
  template:
    metadata:
      labels:
        app: django-service
    spec:
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: santa-db
      containers:
        - name: santa-app
          image: 7imbrook/santa@sha256:94236f292ac207774c4b3d38bbd3cdb9b47de3f02b65d65eca802a48fb8409a0
          volumeMounts:
            - name: database
              mountPath: /mnt/databases/santa
---
apiVersion: v1
kind: Service
metadata:
  name: secret-santa-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: django-service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: santa
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: santa.timbrook.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: secret-santa-app
          servicePort: http
